# desktop

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Taskfile.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/desktop/: package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/src/: commands.rs  lib.rs
apps/desktop/web/: App.tsx  index.css  tauri-transport.test.ts  tauri-transport.ts
apps/web/client/: package.json  vite.config.ts
apps/web/client/src/: App.tsx  contracts-runtime.mock.ts  contracts-runtime.ts  index.css
apps/web/server/: Cargo.toml
apps/web/server/src/: app_state.rs  bootstrap.rs  config.rs  error.rs  main.rs  routes.rs
crates/acp/: Cargo.toml
crates/acp/examples/: mock_agent.rs  opencode_agent.rs  opencode_chat.rs
crates/acp/src/: connection.rs  dispatch.rs  error.rs  frame.rs  lib.rs  transport.rs
crates/acp/tests/: connection.rs
crates/application/: Cargo.toml
crates/application/src/: error.rs  lib.rs
crates/application/src/project/: tests.rs
crates/application/src/session/: tests.rs
crates/application/src/skill/: handlers.rs  import.rs  import_tests.rs  local_store.rs  mod.rs  ports.rs  reconcile.rs  tests.rs  validation.rs
crates/application/src/task/: tests.rs
crates/application/src/worktree/: tests.rs
crates/backend/src/: bootstrap.rs  error.rs  skill.rs
crates/backend/src/agent_runtime/: mod.rs
crates/contracts/: Cargo.toml
crates/contracts/src/: agent.rs  file_system.rs  frontend.rs  git.rs  lib.rs  project.rs  project_work_context.rs  session.rs  skill.rs  task.rs
crates/contracts/src/acp/: authentication.rs  common.rs  content.rs  error.rs  file.rs  initialization.rs  literals.rs  mcp.rs  mod.rs  notification.rs  permission.rs  plan.rs  prompt.rs  rpc.rs  serde_util.rs  session.rs  session_config_options.rs  session_mode.rs  slash_command.rs  terminal.rs  tool_call.rs
crates/db/src/: lib.rs  repository_tests.rs  tests.rs
crates/db/src/repository/: connection.rs  mod.rs  skill.rs  skill_import.rs
crates/gitlancer/src/: lib.rs  logging.rs
crates/gitlancer/src/exec/: runner.rs
crates/gitlancer/src/git/: config.rs  mod.rs
crates/logging/: Cargo.toml
crates/logging/src/: config.rs  gitlancer_bridge.rs  init.rs  lib.rs  test_support.rs  tests.rs
crates/plugin-manager/: Cargo.toml
crates/plugin-manager/examples/: number_add.rs
crates/plugin-manager/src/: config.rs  error.rs  lib.rs  manager.rs  process.rs
crates/plugin-manager/tests/: test_add.rs
crates/plugin-protocol/: Cargo.toml
crates/plugin-protocol/src/: json_rpc.rs  lib.rs
docs/: BRAINSTORM.md  gitlancer-architecture.md  web-server-runtime.md
openspec/changes/archive/2026-05-27-gitlancer-logging-registry/: design.md  proposal.md  (+1 more)
openspec/specs/git-runtime-operations/: spec.md
openspec/specs/gitlancer-logger-registry/: spec.md
test/: test_add.rs
test/fixture/: main.ts  ora-sdk.ts  tsconfig.json
xtask/src/: export_contracts.rs  export_plugin_sdk.rs
(+7 files in other folders)
