[package]
name = "ora-application"
version.workspace = true
edition.workspace = true

[lib]
name = "ora_application"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
gitlancer = { workspace = true }
gray_matter = { workspace = true }
ora-contracts = { workspace = true }
ora-domain = { workspace = true }
ora-logging = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
