[package]
name = "ora-contracts"
version.workspace = true
edition.workspace = true

[lib]
name = "ora_contracts"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
derive_more = { workspace = true, features = ["from", "display"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
ts-rs = { workspace = true, features = ["format", "no-serde-warnings"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
